fix code quality issues